WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187070
Skip some unnecessary work in Interpreter::getStackTrace().
https://bugs.webkit.org/show_bug.cgi?id=187070
Summary
Skip some unnecessary work in Interpreter::getStackTrace().
Mark Lam
Reported
2018-06-26 16:40:02 PDT
Patch coming.
Attachments
proposed patch.
(1.57 KB, patch)
2018-06-26 16:41 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2018-06-26 16:41:52 PDT
Created
attachment 343660
[details]
proposed patch.
Michael Saboff
Comment 2
2018-06-26 16:52:35 PDT
Comment on
attachment 343660
[details]
proposed patch. r=me
Mark Lam
Comment 3
2018-06-26 17:36:17 PDT
Comment on
attachment 343660
[details]
proposed patch. Thanks for the review. Landing.
WebKit Commit Bot
Comment 4
2018-06-26 17:43:31 PDT
Comment on
attachment 343660
[details]
proposed patch. Clearing flags on attachment: 343660 Committed
r233234
: <
https://trac.webkit.org/changeset/233234
>
WebKit Commit Bot
Comment 5
2018-06-26 17:43:33 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-06-26 17:44:19 PDT
<
rdar://problem/41500353
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug