Skip some unnecessary work in Interpreter::getStackTrace(). https://bugs.webkit.org/show_bug.cgi?id=187070

Reviewed by Michael Saboff.

* interpreter/Interpreter.cpp:
(JSC::Interpreter::getStackTrace):


Canonical link: https://commits.webkit.org/202323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233234 268f45cc-cd09-0410-ab3c-d52691b4dbfc